--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config ./build/webpack.dev.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.dev.js",
     "server": "nodemon ./build/server.js",
-    "build:dev": "webpack --config build/webpack.dev.js",
-    "build": "webpack --config build/webpack.prod.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --config build/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js",
     "generateAnalyzerFile": "webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json"
   },
@@ -19,9 +19,14 @@
   "author": "wangyuanyuan",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
     "autoprefixer": "^10.4.12",
+    "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.26.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "express": "^4.18.2",
@@ -41,6 +46,9 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "url-loader": "^4.1.1",
+    "vue-loader": "^15.10.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^4.10.0",
