--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build:dev": "cross-env NODE_ENV=development webpack --config build/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js",
     "generateAnalyzerFile": "webpack --profile --json > stats.json",
-    "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json"
+    "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json",
+    "lint": "eslint --ext .js --ext .jsx --ext .vue src/",
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
   },
   "keywords": [],
   "author": "wangyuanyuan",
@@ -29,10 +31,15 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.7.0",
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
     "express-session": "^1.17.3",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
     "image-webpack-loader": "^8.1.0",
@@ -42,13 +49,12 @@
     "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
+    "prettier": "^2.7.1",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
-    "url-loader": "^4.1.1",
-    "vue-loader": "^15.10.0",
+    "vue-loader": "^17.0.1",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.7.14",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^4.10.0",
@@ -56,6 +62,7 @@
   },
   "dependencies": {
     "jquery": "^3.6.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "vue": "^3.2.45"
   }
 }
