--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "webpackdemo",
   "sideEffects": [
-    "*.scss"
+    "*.scss",
+    "*.vue"
   ],
   "version": "1.0.0",
   "description": "使用webpack 5.74构建前端项目",
@@ -45,12 +46,12 @@
     "image-webpack-loader": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^7.0.3",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
-    "sass-loader": "^13.1.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "vue-loader": "^17.0.1",
