--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
+    "unplugin-auto-import": "^0.11.5",
+    "unplugin-vue-components": "^0.22.11",
     "vue-loader": "^17.0.1",
     "vue-style-loader": "^4.1.3",
     "webpack": "^5.74.0",
@@ -62,6 +64,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "element-plus": "^2.2.22",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "vue": "^3.2.45",
