--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "sass-loader": "^13.2.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
+    "thread-loader": "^3.0.4",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-vue-components": "^0.22.11",
     "vue-loader": "^17.0.1",
@@ -64,6 +67,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "element-plus": "^2.2.22",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
