--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
     "progress-bar-webpack-plugin": "^2.1.0",
+    "purgecss-webpack-plugin": "^5.0.0",
     "sass-loader": "^13.2.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
@@ -70,7 +71,7 @@
     "chalk": "^4.1.2",
     "element-plus": "^2.2.22",
     "js-cookie": "^3.0.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.45",
     "vue-demi": "^0.13.11",
     "vue-router": "^4.1.6"
