--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js",
     "generateAnalyzerFile": "webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer --port 8888 ./dist/stats.json",
-    "lint": "eslint --ext .js --ext .jsx --ext .vue src/",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
+    "lint": "eslint --ext .js,.ts,.d.ts,.tsx,.vue src/",
+    "lint-fix": "eslint --fix --ext .js,.ts,.d.ts,.tsx,.vue src/"
   },
   "keywords": [],
   "author": "wangyuanyuan",
@@ -24,6 +24,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -58,6 +61,7 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "thread-loader": "^3.0.4",
+    "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-vue-components": "^0.22.11",
     "vue-loader": "^17.0.1",
@@ -68,6 +72,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.2",
     "chalk": "^4.1.2",
     "element-plus": "^2.2.22",
     "js-cookie": "^3.0.1",
