--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.2",
+    "axios": "^1.2.1",
     "chalk": "^4.1.2",
     "element-plus": "^2.2.22",
     "js-cookie": "^3.0.1",
