--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "image-webpack-loader": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^8.0.0",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "purgecss-webpack-plugin": "^5.0.0",
-    "sass-loader": "^13.2.0",
+    "sass": "^1.56.1",
+    "sass-loader": "7.3.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
