--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "core-js": "^3.26.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
+    "css-loader": "3.6.0",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -56,7 +56,7 @@
     "progress-bar-webpack-plugin": "^2.1.0",
     "purgecss-webpack-plugin": "^5.0.0",
     "sass": "^1.56.1",
-    "sass-loader": "7.3.0",
+    "sass-loader": "9.0.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
