--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "element-plus": "^2.2.22",
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.45",
     "vue-demi": "^0.13.11",
     "vue-router": "^4.1.6"
