--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "image-webpack-loader": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "^2.6.1",
+    "mockjs": "^1.1.0",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
